--- a/AzureMediaService/Views/Home/Index.cshtml
+++ b/AzureMediaService/Views/Home/Index.cshtml
@@ -1,31 +1,36 @@
-﻿@{
+﻿@using System.Web.Mvc.Html
+@model AzureMediaService.Models.MediaContentModel
+
+@{
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+@using (Html.BeginForm("Create", "EncodeMedia"))
+{
+    <div id="connectionStrings" class="card">
+        <h4>Upload Media File</h4>
+        <table>
+            <colgroup>
+                <col span="2" />
+            </colgroup>
+            <tr>
+                <td>
+                    <label>Asset Name:</label>
+                </td>
+                <td>
+                    @Html.TextBoxFor(model => model.MediaName, new {@class = "form-control", Required = "Required"})
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label>Local Path:</label>
+                </td>
+                <td>
+                    @Html.TextBoxFor(model => model.MediaFileLocalPath, new {@class = "form-control", Required = "Required"})
+                </td>
+            </tr>
+        </table>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <input id="backup" type="submit" value="Submit" class="button" name="Start" />
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+}
