Play actual media from ams

--- a/AzureMediaService/AzureMediaService/Views/Home/Index.cshtml
+++ b/AzureMediaService/AzureMediaService/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
                     <label>Local Path:</label>
                 </td>
                 <td>
-                    @Html.TextBoxFor(model => model.MediaFileLocalPath, new { @class = "form-control", Required = "Required" })
+                    @Html.TextBoxFor(model => model.MediaFilePath, new { @class = "form-control", Required = "Required" })
                 </td>
             </tr>
         </table>
