--- a/AzureMediaService/AzureMediaService/Views/PlayMedia/Index.cshtml
+++ b/AzureMediaService/AzureMediaService/Views/PlayMedia/Index.cshtml
@@ -3,5 +3,15 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>@Model.MediaName</h2>
+
+<link href="//amp.azure.net/libs/amp/latest/skins/amp-default/azuremediaplayer.min.css" rel="stylesheet">
+<script src="//amp.azure.net/libs/amp/latest/azuremediaplayer.min.js"></script>
+
+<video id="vid1" class="azuremediaplayer amp-default-skin" autoplay controls width="640" height="400" data-setup='{"nativeControlsForTouch": false}'>
+    <source src="@Model.MediaFilePath" type="application/vnd.ms-sstr+xml" />
+    <p class="amp-no-js">
+        To view this video please enable JavaScript, and consider upgrading to a web browser that supports HTML5 video
+    </p>
+</video>
 
