--- a/Ams.Forms/Ams.Forms/Ams.Forms/Views/MediaContentListPage.xaml
+++ b/Ams.Forms/Ams.Forms/Ams.Forms/Views/MediaContentListPage.xaml
@@ -6,7 +6,7 @@
     <ContentPage.Content>
             <ScrollView Padding="5,5,5,5" BackgroundColor="WhiteSmoke">
                 <StackLayout BackgroundColor="WhiteSmoke">
-                    <ListView ItemsSource="{Binding MediaContent}" RowHeight="52" CachingStrategy="RecycleElement">
+                    <ListView ItemsSource="{Binding MediaContent}" RowHeight="52" CachingStrategy="RecycleElement" ItemTapped="Handle_Tapped">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <ViewCell>
